# citation-verifier

./: .gitignore  API_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RUN_TEST.sh  TESTING_GUIDE.md  WEB_UI_GUIDE.md  app.py  citation-agent-architecture.md  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  test_article.md  test_cli_demo.md  test_doc.md  test_short.md  test_simple.md
src/analyzers/: chunker.py  retriever.py
src/citation_verifier/: api.py  cli.py  main.py  models.py  pipeline.py  verifier.py
src/extractors/: claim_extractor.py  test.py
src/parsers/: html.py  html_parser.py  markdown.py  pdf.py  test_html.py
src/reporters/: json_report.py  markdown_report.py  terminal_report.py
tests/: README.md
tests/citation_verifier/: test_fetcher.py  test_models.py  test_pipeline.py
tests/extractors/: test_claim_extractor.py
tests/parsers/: test_html_parser.py  test_markdown.py  test_pdf.py
