[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citation-verifier"
version = "0.1.0"
description = "AI-powered citation verification tool"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "httpx",
    "python-dotenv",
    "anthropic",
    "openai",
    "trafilatura",
    "PyMuPDF",
    "beautifulsoup4",
    "markdownify",
    "sentence-transformers",
    "chromadb",
    "typer",
    "rich",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[project.scripts]
cite-verify = "citation_verifier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_verifier"]
